# beepboop

./: .gitignore  .laio.yaml  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml  release.yaml
Formula/: beepboop.rb
data/: aarch64-darwin.json  aarch64-linux.json  x86_64-linux.json
nix/: ci.nix  dev.nix
src/: main.rs
src/cli/: mod.rs
src/core/: mod.rs
src/tui/: mod.rs
