[package]
name = "beepboop"
version = "0.1.0"
description = "A fully-fledged AI agent harness with rig.rs, SurrealDB, and responsive TUI"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rig-core = "0.35.0"

[dependencies.clap]
version = "4.6.1"
features = ["derive"]

[dependencies.ratatui]
version = "0.30"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.52.1"
features = ["full"]

[dev-dependencies]
